--- a/src/app/components/asignacion-equipo-usuario/modal-visualizacion-asignacion-equipo-usuario/modal-visualizacion-asignacion-equipo-usuario.component.html
+++ b/src/app/components/asignacion-equipo-usuario/modal-visualizacion-asignacion-equipo-usuario/modal-visualizacion-asignacion-equipo-usuario.component.html
@@ -113,18 +113,18 @@
       </button>
         </div>
         <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
-          <div class="card flex flex-col" *ngFor="let archivo of listaArchivos">
+          <div class="card h-72" *ngFor="let archivo of listaArchivos; index as i">
             <div class="flex justify-end mb-1" (click)="eliminarArchivo(archivo)">
               <a href="javascript:;">
-              <span
-                class="text-xs font-medium mr-2 px-2.5 py-0.5 rounded bg-red-700 text-red-200 ">
-                Eliminar
-              </span>
-            </a>
+                <span
+                  class="text-xs font-medium mr-2 px-2.5 py-0.5 rounded bg-red-700 text-red-200 ">
+                  Eliminar
+                </span>
+              </a>
             </div>
-            <div class="flex justify-center  ">
-              <img
-              class="h-auto max-w-full rounded-lg m-5"
+            <div class="flex justify-center content-center">
+              <img matTooltip="Ver Imagen"
+              class="h-56 max-w-full rounded-lg m-5"
               (click)="abrirDocumento(archivo.archivo)"
                src={{archivo.url}}
               alt=""
