--- a/src/app/components/lista-inventario/lista-inventario.component.html
+++ b/src/app/components/lista-inventario/lista-inventario.component.html
@@ -130,8 +130,9 @@
               <div class="flex justify-center items-center mb-1 mt-1">
                 <div class="text-center"><b>Categoría:</b> {{ item.categoria }}</div>
               </div>
-              <div class="flex justify-center items-center mb-1 mt-1">
+              <div class="flex justify-between items-center mb-1 mt-1">
                 <div class="text-center"><b>Nuevo:</b> {{ item.nuevo ? 'Si':'No' }}</div>
+                <div class="text-center"><b>Estatus:</b> {{ item.catEstatusinventario}}</div>
               </div>
 <!--               <div class="flex justify-center items-center mb-1 mt-1">
                 <div class="text-center"><b>Año:</b> {{ item.anio }}</div>
@@ -307,7 +308,7 @@
               </div>
             </mat-cell>
           </ng-container> -->
-<!--           <ng-container matColumnDef="catEstatusinventario">
+           <ng-container matColumnDef="catEstatusinventario">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
               Estatus
             </mat-header-cell>
@@ -316,7 +317,7 @@
                 {{ row.catEstatusinventario}}
               </div>
             </mat-cell>
-          </ng-container> -->
+          </ng-container>
           <ng-container matColumnDef="numerodeserie">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
               # de Serie
