--- a/src/app/components/lista-ubicaciones/lista-ubicaciones.component.html
+++ b/src/app/components/lista-ubicaciones/lista-ubicaciones.component.html
@@ -182,7 +182,7 @@
                 </div> -->
                 <div class="mt-3.5 flex flex-col justify-center">
                   <div class="flex justify-center">
-                    <mat-slide-toggle [checked]="true" (change)="EliminarFabricante(item)"></mat-slide-toggle>
+                    <mat-slide-toggle [checked]="true" (change)="EliminarFabricanteCards(item,$event)"></mat-slide-toggle>
                   </div>
                   <div>Deshabilitar</div>
                 </div>
