--- a/src/app/components/lista-ubicaciones/modal-ubicaciones/modal-ubicaciones.component.html
+++ b/src/app/components/lista-ubicaciones/modal-ubicaciones/modal-ubicaciones.component.html
@@ -58,7 +58,7 @@
           >
         </mat-form-field>
       </div>
-      <div class="flex justify-center">
+      <div class="flex flex-col lg:flex-row md:flex-row sm:gap-4">
         <div class="lg:w-1/2 md:w-1/2 w-full" >
           <label
             class="block mb-2 text-sm font-medium text-gray-900"
@@ -72,12 +72,17 @@
                 <button style="margin-left: 1rem;" type="button" (click)="openFileSelector()">Buscar Archivo</button>
               </ng-template>
           </ngx-file-drop>
-          <a *ngIf="this.tokenArchivo != ''"
+          <!-- <a *ngIf="this.tokenArchivo != ''"
             (click)="abrirDocumento(this.tokenArchivo)"
             href="javascript: void(0)"
             class="title mt-2 flex justify-center text-sm text-blue-500"
             id="file_input_help"
-            >Ver Plano<mat-icon>remove_red_eye</mat-icon> </a>
+            >Ver Plano<mat-icon>remove_red_eye</mat-icon> </a> -->
+        </div>
+        <div class="flex items-center">
+          <button class="h-10 mt-2" *ngIf="this.tokenArchivo != ''" type="button" mat-flat-button color="primary"
+            (click)="abrirDocumento(this.tokenArchivo)"> Ver Plano <mat-icon>remove_red_eye</mat-icon>
+          </button>
         </div>
       </div>
     </form>
