--- a/src/app/components/asignacion-equipo-usuario/asignacion-equipo-usuario.component.html
+++ b/src/app/components/asignacion-equipo-usuario/asignacion-equipo-usuario.component.html
@@ -334,43 +334,6 @@
             </mat-cell>
           </ng-container>
 
-          <!-- <ng-container matColumnDef="responsiva">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>
-              Responsiva firmada
-            </mat-header-cell>
-            <mat-cell
-              *matCellDef="let row"
-              data-label="Responsiva_firmada"
-              class="flex justify-center"
-            >
-              <input
-                id="responsiva_file"
-                #responsiva_file
-                type="file"
-                class="hidden"
-                (change)="cargarResponsiva($event, row)"
-              />
-              <a
-                *ngIf="!row.responsiva"
-                (click)="responsiva_file.click()"
-                matTooltip="Sube responsiva firmada"
-                class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
-                mat-icon-button
-              >
-                <mat-icon class="icon-sm" svgIcon="mat:file_upload"></mat-icon>
-              </a>
-              <a
-                *ngIf="row.responsiva"
-                (click)="abrirDocumento(row.responsiva)"
-                matTooltip="Visualizar responsiva"
-                class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
-                mat-icon-button
-              >
-                <mat-icon class="icon-sm" svgIcon="mat:open_in_new"></mat-icon>
-              </a>
-            </mat-cell>
-          </ng-container> -->
-
           <ng-container matColumnDef="actions">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
               Acción
@@ -400,11 +363,11 @@
                 </a>
                 <a
                 (click)="openModalContenedor(row)"
-                matTooltip="Ver detalle"
+                matTooltip="Contenedores"
                 class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
                 mat-icon-button
               >
-                <mat-icon class="icon-sm" svgIcon="mat:visibility"></mat-icon>
+                <mat-icon class="icon-sm" svgIcon="mat:add_photo_alternate"></mat-icon>
               </a>
               </div>
             </mat-cell>
