--- a/src/app/components/asignacion-equipo-usuario/asignacion-equipo-usuario.component.html
+++ b/src/app/components/asignacion-equipo-usuario/asignacion-equipo-usuario.component.html
@@ -296,6 +296,7 @@
               *matCellDef="let row"
               data-label="Responsivas"
             >
+            <div class="flex justify-center">
               <a
                 matTooltip="Descarga responsiva"
                 class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
@@ -331,6 +332,8 @@
               >
                 <mat-icon class="icon-sm" svgIcon="mat:open_in_new"></mat-icon>
               </a>
+
+            </div>
             </mat-cell>
           </ng-container>
 
