--- a/src/app/components/lista-adquisiciones/modal-adquisicion/modal-adquisicion.component.html
+++ b/src/app/components/lista-adquisiciones/modal-adquisicion/modal-adquisicion.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center" style="border: none !important" mat-dialog-title>
+<div class="flex flex-col lg:flex-row md:flex-row sm:gap-4" style="border: none !important" mat-dialog-title>
   <h2 class="headline m-0 flex-auto">
     {{
       this.adquisicionModel.id > 0
@@ -7,14 +7,19 @@
     }}
     <!-- <b>{{ this.adquisicionModel.id }}</b> -->
   </h2>
-  <button></button>
+  <div *ngIf="this.adquisicionModel.id == 0">
+    <mat-button-toggle-group class="px-2 py-2 m-0" #group="matButtonToggleGroup" aria-label="Favorite Color" [value]="cargaMasiva" (change)="onValChange(group.value)">
+      <mat-button-toggle value="normal">Normal</mat-button-toggle>
+      <mat-button-toggle value="masiva">Masiva</mat-button-toggle>
+    </mat-button-toggle-group>
+  </div>
   <!-- <mat-icon  svgIcon="mat:help" matTooltip="El grupo de opciones funciona como un alias o una etiqueta para una lista de opciones."></mat-icon> -->
   <button class="text-secondary" mat-dialog-close mat-icon-button type="button">
     <mat-icon svgIcon="mat:close"></mat-icon>
   </button>
 </div>
 <mat-divider class="-mx-6 text-border"></mat-divider>
-<mat-dialog-content class="px-1">
+<mat-dialog-content class="px-1"  *ngIf="this.cargaMasiva == 'normal'">
   <!-- ACCORDION -->
   <mat-accordion
     #accordion="matAccordion"
@@ -433,6 +438,169 @@
       {{ this.adquisicionModel.id > 0 ? "Editar" : "Agregar" }}
     </button>
   </div>
+</mat-dialog-content>
+<mat-dialog-content class="px-1"  *ngIf="this.cargaMasiva == 'masiva'">
+  <mat-accordion
+    #accordion="matAccordion"
+    class="example-headers-align"
+    [multi]="true"
+  >
+  <mat-expansion-panel [expanded]="true">
+    <mat-expansion-panel-header>
+      <mat-panel-title> Carga de forma masiva </mat-panel-title>
+      <mat-panel-description>
+        <mat-panel-description>
+          Información general
+          <mat-icon
+            class="icon-sm"
+            svgIcon="mat:keyboard_arrow_down"
+          ></mat-icon>
+        </mat-panel-description>
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <!-- FORMULARIO ADQUISICION -->
+    <form
+      role="form"
+      autocomplete="off"
+      [formGroup]="formAdquisicion"
+      novalidate
+    >
+      <div class="mt-4 flex flex-col gap-2 m-2">
+        <div class="flex flex-col lg:flex-row md:flex-row sm:gap-4  justify-center">
+          <button class="h-10 mt-2" type="button" mat-flat-button color="primary"
+            (click)="descargarPlantilla()"> Descargar Plantilla <mat-icon>cloud_download</mat-icon>
+        </button>
+        </div>
+        <div class="flex flex-col lg:flex-row md:flex-row sm:gap-4">
+          <div class="lg:w-1/3 md:w-1/3 w-full">
+            <label
+              class="block mb-2 text-sm font-medium text-gray-900"
+              for="file_input"
+              >Factura PDF</label
+            >
+            <ngx-file-drop
+              dropZoneLabel="Drop files here"
+              (onFileDrop)="dropped($event)"
+              (onFileOver)="fileOver($event)"
+              (onFileLeave)="fileLeave($event)"
+              accept="application/pdf"
+              [multiple]="false"
+            >
+              <ng-template
+                ngx-file-drop-content-tmp
+                let-openFileSelector="openFileSelector"
+              >
+                Arraste archivo
+                <button
+                  style="margin-left: 1rem"
+                  type="button"
+                  (click)="openFileSelector()"
+                >
+                  <b>Buscar archivo</b>
+                </button>
+              </ng-template>
+            </ngx-file-drop>
+            <a
+              *ngIf="adquisicionModel.facpdf != ''"
+              (click)="abrirDocumento(adquisicionModel.facpdf)"
+              href="javascript: void(0)"
+              class="underline underline-offset-1 mt-2 flex justify-center text-sm text-blue-500"
+              id="file_input_help"
+              >Descargar factura PDF.</a
+            >
+          </div>
+          <div class="lg:w-1/3 md:w-1/3 w-full">
+            <label
+              class="block mb-2 text-sm font-medium text-gray-900"
+              for="file_input2"
+              >Factura XML</label
+            >
+            <ngx-file-drop
+              dropZoneLabel="Drop files here"
+              (onFileDrop)="dropped($event)"
+              (onFileOver)="fileOver($event)"
+              (onFileLeave)="fileLeave($event)"
+              accept="text/xml"
+              [multiple]="false"
+            >
+              <ng-template
+                ngx-file-drop-content-tmp
+                let-openFileSelector="openFileSelector"
+              >
+                Arrastre archivo
+                <button
+                  style="margin-left: 1rem"
+                  type="button"
+                  (click)="openFileSelector()"
+                >
+                <b>Buscar archivo</b>
+                </button>
+              </ng-template>
+            </ngx-file-drop>
+            <a
+              *ngIf="adquisicionModel.facxml != ''"
+              (click)="abrirDocumento(adquisicionModel.facxml)"
+              href="javascript: void(0)"
+              class="underline underline-offset-1 mt-2 flex justify-center text-sm text-blue-500"
+              id="file_input_help"
+              >Descargar factura XML.</a
+            >
+          </div>
+          <div class="lg:w-1/3 md:w-1/3 w-full">
+            <label
+              class="block mb-2 text-sm font-medium text-gray-900"
+              for="file_input"
+              >Plantilla de Carga Masiva</label
+            >
+            <ngx-file-drop
+              dropZoneLabel="Drop files here"
+              (onFileDrop)="droppedPlantilla($event)"
+              (onFileOver)="fileOver($event)"
+              (onFileLeave)="fileLeave($event)"
+              accept="application/pdf"
+              [multiple]="false"
+            >
+              <ng-template
+                ngx-file-drop-content-tmp
+                let-openFileSelector="openFileSelector"
+              >
+                Arraste archivo
+                <button
+                  style="margin-left: 1rem"
+                  type="button"
+                  (click)="openFileSelector()"
+                >
+                  <b>Buscar archivo</b>
+                </button>
+              </ng-template>
+            </ngx-file-drop>
+            <a
+              *ngIf="adquisicionModel.facpdf != ''"
+              (click)="abrirDocumento(tokenPlantilla)"
+              href="javascript: void(0)"
+              class="underline underline-offset-1 mt-2 flex justify-center text-sm text-blue-500"
+              id="file_input_help"
+              >Descargar plantilla.</a
+            >
+          </div>
+        </div>
+      </div>
+    </form>
+    <!-- TERMINA FORMULARIO ADQUISICION -->
+    <div class="flex justify-end">
+      <button type="button" mat-button mat-dialog-close>Cancelar</button>
+      <button
+        type="submit"
+        mat-flat-button
+        color="primary"
+        (click)="guardarAdquisicion()"
+        [disabled]="formAdquisicion.invalid"
+      >
+        {{ this.adquisicionModel.id > 0 ? "Editar" : "Agregar" }}
+      </button>
+    </div>
+  </mat-expansion-panel>
+  </mat-accordion>
 </mat-dialog-content>
 <!-- <mat-dialog-actions align="end" *ngIf="this.adquisicionModel.id == 0">
 
