Se integra carta responsiva

--- a/src/app/components/asignacion-equipo-usuario/asignacion-equipo-usuario.component.html
+++ b/src/app/components/asignacion-equipo-usuario/asignacion-equipo-usuario.component.html
@@ -301,6 +301,7 @@
                 matTooltip="Descarga responsiva"
                 class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
                 mat-icon-button
+                (click)="generarCartaResponsivaDocumento(row.idrelusuarioinventario)"
               >
                 <mat-icon
                   class="icon-sm"
