--- a/src/app/components/arrendamiento-inventario/asignacion-inventario-empleado/asignacion-inventario-empleado.component.html
+++ b/src/app/components/arrendamiento-inventario/asignacion-inventario-empleado/asignacion-inventario-empleado.component.html
@@ -305,6 +305,7 @@
                 matTooltip="Descarga responsiva"
                 class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
                 mat-icon-button
+                (click)="generarCartaResponsivaDocumento(row.idrelempleadoinventarioarrendamiento)"
               >
                 <mat-icon
                   class="icon-sm"
