Se guarda usuario en la sesion

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="text-center mt-4">
-      <h2 class="title m-0">Sistema Mesa de validación</h2>
+      <h2 class="title m-0">Sistema de Inventarios</h2>
       <h4 class="body-2 text-secondary m-0">Completar los siguientes campos</h4>
     </div>
 
