--- a/src/@vex/layout/sidenav/sidenav.component.html
+++ b/src/@vex/layout/sidenav/sidenav.component.html
@@ -47,11 +47,11 @@
          matRippleColor="var(--sidenav-item-ripple-color)">
       <!-- <img alt="User Avatar" class="vex-sidenav-user__image flex-none" src="assets/img/user.png"/> -->
       <div class="vex-sidenav-user__content flex-auto">
-        <!-- <div class=""><span><b>{{this.sesionUsuarioActual.nombre}}</b></span></div> -->
-        <div class=""><span><b>Prueba</b></span></div>
+        <div class=""><span><b>{{this.sesionUsuarioActual.nombres + ' '+ this.sesionUsuarioActual.apellidos}}</b></span></div>
+        <!-- <div class=""><span><b>Prueba</b></span></div> -->
         <div><hr></div>
-        <!-- <div class=""><span>{{this.sesionUsuarioActual.correo}}</span></div> -->
-        <div class=""><span>Prueba</span></div>
+        <div class=""><span>{{this.sesionUsuarioActual.usuario}}</span></div>
+        <!-- <div class=""><span>Prueba</span></div> -->
       </div>
       <mat-icon class="vex-sidenav-user__dropdown-icon flex-none" svgIcon="mat:arrow_drop_down"></mat-icon>
     </div>
