--- a/src/app/components/asignacion-equipo-usuario/contenedor-form/contenedor-form.component.html
+++ b/src/app/components/asignacion-equipo-usuario/contenedor-form/contenedor-form.component.html
@@ -121,7 +121,8 @@
       {{this.item.id > 0 ? 'Editar Contenedor':'Guardar Contenedor'}}
     </button>
   </div>
-<!--   <div>{{this.formContenedores.getRawValue() | json}}</div>
+  <div>{{this.formContenedores.getRawValue() | json}}</div>
+<!--
   <br>
   <div>{{this.item | json}}</div> -->
 </form>
